# climax_controller

./: .gitignore  Anchor.toml  README.md  package-lock.json  package.json  tsconfig.json
app/: README.md  package-lock.json  package.json
app/public/: index.html
app/src/: App.css  App.js  ApproveCard.js  Config.js  ConnectWallet.js  Defaults.js  ExecuteCard.js  Header.js  ImageToken.js  Nav.js  ProposeCard.js  StakeCard.js  StakeNFT.js  UnstakeCard.js  UnstakeNFT.js  idl.json  scratch.js  utils.js
app/src/components/: ConnectWallet.js  ExecuteMultisigWithdrawCard.js  MultisigStateCard.js  ProposeMultisigWithdrawCard.js  UserWithdrawCard.js
devnet_tests/: conf  devnet_init.ts  nft_airdrop.ts  test_individual_instructions.ts  utils.rs
devnet_tests/cache/: top_holder_addresses.csv  transaction_records.txt  valid_pairs.csv
devnet_tests/load_dao_sample_url_utils/: load_sample_urls.ts
devnet_tests/load_dao_sample_url_utils_multiple/: load_sample_urls_multiple.ts
devnet_tests/load_dao_sample_url_utils_multiple/cache/: sample_images.csv  to_process.csv
devnet_tests/platinum_airdrop/: platinum_airdrop.ts  transaction_records.txt
devnet_tests/registration_utils/: check_registration_status.ts
devnet_tests/registration_utils/backup_sc_cache/: registered.csv  to_process.csv
devnet_tests/registration_utils/cache/: registered.csv  (+1 more)
devnet_tests/wallet_snapshot/: wallet_snapshot.ts
programs/climax_controller/: Cargo.toml
programs/climax_controller/src/: lib.rs
tests/: climax_controller.ts  test_end_to_end_failure.ts  test_end_to_end_success.ts
(+1 files in other folders)
