[package]
name = "dao_multisig_treasury"
version = "0.1.0"
description = "Created with Anchor"
edition = "2018"

[lib]
crate-type = ["cdylib", "lib"]
name = "dao_multisig_treasury"

[features]
no-entrypoint = []
no-idl = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
anchor-lang = "0.19.0"
anchor-spl = "0.19.0"
spl-token = "3.1.1"
spl-token-metadata = { version = "0.0.1", features = ["no-entrypoint"] }
solana-program = "1.8.9"
nft-candy-machine = { git = "https://github.com/metaplex-foundation/metaplex-program-library", branch = "master" , features = ["no-entrypoint"]}
mpl-token-metadata = { git = "https://github.com/metaplex-foundation/metaplex-program-library", branch = "master" , features = ["no-entrypoint"]}

